# marks-markdown-manager

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  TODO.md  mmm.yaml.example  mock-mmm.yaml  pyproject.toml  setup.cfg
mock/context/: coding-standards.md  persona.md
mock/skills/code-review/: SKILL.md
mock/skills/test-writer/: SKILL.md
mock/subagents/planner/: SKILL.md
mock/subagents/researcher/: SKILL.md
skills/dedup-checker/: SKILL.md
src/mmm/: __init__.py  __main__.py  cli.py  config.py  dedup.py  deployer.py
tests/: conftest.py  test_cli.py  test_config.py  test_deployer.py
