[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "marks-markdown-manager"
version = "0.1.0"
description = "Distribute AI tool configuration (context, skills, subagents) across Windsurf, Gemini CLI, Codex CLI, and Claude Code"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
mmm = "mmm.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
